# paramAItric

./: .gitignore  ARCHITECTURE.md  BEST_PRACTICES.md  DEVELOPMENT_PLAN.md  Fusion 360 CAD Copilot.md  HOST_INTEGRATION.md  HOUSEKEEPING.md  INSTALL.md  LICENSE  New Text Document.txt  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  ROADMAP.md  WORKFLOW_STRATEGY.md  fusion ai bridge mcp.md  make_pole_mount_4_holes.py  make_pole_mount_debug.py  make_pole_mount_with_holes.py  paramaitric-handoff.md  pyproject.toml  repo description.md
.pi/: SYSTEM.md  mcp.json
docs/: AI_CAD_PLAYBOOK.md  AI_CONTEXT.md  CSG_CHECKLIST.md  FREEFORM_CHECKLIST.md  FREEFORM_PLAYBOOK.md  FUSION_HARDWARE_TASKLIST.md  FUSION_VALIDATION_NEXT_STEPS.md  MIGRATION_PROCESS.md  NEXT_PHASE_PLAN.md  NEXT_RESEARCH_PLAN.md  POLE_MOUNT_DEMO.md  README.md  RESEARCH_TRACKS.md  SESSION_TRANSFER_METHOD.md  STABLE_REFERENCE_POLICY.md  UX_ROADMAP.md  VERIFICATION_POLICY.md  WORKFLOW_MIGRATION_GUIDE.md  community-addin-integration-strategy.md  dev-log.md  future-avenues.md  session-handoff-2026-03-09-next.md  session-handoff-2026-03-09.md  session-handoff-2026-03-11-next.md  session-handoff-2026-03-12-next.md  session-handoff-2026-03-15.md  session-handoff-2026-03-29.md  utility-parts-concept.md
evaluations/: .gitignore  BASELINE_CAPTURE.md  README.md  __init__.py  baseline.py
fusion_addin/: FusionAIBridge.manifest  FusionAIBridge.py  __init__.py  bootstrap.py  cancellation.py  dispatcher.py  http_bridge.py  state.py  workflows.py
i2-evidence/: .gitignore  README.md
internal/: README.md  freeform-architecture.md  (+20 more)
(+294 files in other folders)
