[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "paramaitric"
version = "0.1.0"
description = "ParamAItric scaffold for Fusion 360 bridge and MCP workflow development."
authors = [
    { name = "boxwrench" }
]
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["fusion_addin", "fusion_addin.ops", "mcp_server", "mcp_server.tools"]
