[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "paramaitric"
version = "0.1.0"
description = "ParamAItric scaffold for Fusion 360 bridge and MCP workflow development."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "boxwrench" }
]
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.26.0,<1.27.0"]

[project.urls]
Homepage = "https://github.com/boxwrench/paramAItric"
Repository = "https://github.com/boxwrench/paramAItric"
Issues = "https://github.com/boxwrench/paramAItric/issues"

[project.scripts]
paramaitric = "mcp_server.mcp_entrypoint:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fusion_addin*", "mcp_server*"]

[tool.setuptools.package-data]
mcp_server = ["runtime_profiles_data/*.json"]
